# vcoin-0.1.0

./: .env.example  .eslintrc.js  .gitignore  AUDIT_READINESS.md  AUDIT_README.md  CONTRIBUTING.md  ERROR_HANDLING.md  FINAL_AUDIT_CHECKLIST.md  GOVERNANCE_CODE_CHANGES.md  GOVERNANCE_IMPLEMENTATION.md  LICENSE  README.md  SECURITY.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
deployment/: build_sbf.sh  deploy_local.js  package-lock.json  package.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: middleware.ts
program/: .auditignore  Cargo.toml  README.md  client.ts  deploy_local.js  program_keypair.json  test_deployment.js  vcoin_mint.json
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: basic.rs
scripts/: generate-governance-report.js  show-errors.js  simulate-metadata-update.ts  test-metadata-update.js
src/: allocate-token.ts  authority-controls.ts  create-token.ts  index.ts  presale.ts  token2022-adapter.ts  token2022-client.ts  types.d.ts  update-metadata.ts  upgrade-governance.ts  utils.ts  vesting.ts
src/examples/: vcoin-token2022-example.ts
tests/: README.md  Token.md  setup.ts
tests/e2e/: metadata-workflow.test.ts  test-token-metadata.json  token-lifecycle.test.ts
tests/examples/: presale-multicurrency-example.ts
tests/integration/: allocation-workflow.test.ts  token2022.test.ts
tests/security/: input-validation.test.ts
tests/unit/: allocate-token.test.ts  create-token-functions.js  create-token.spec.js  handleError.spec.js  index.test.ts  presale-coverage.spec.js  (+7 more)
types/: bs58.d.ts  spl-token-2022.d.ts
(+18 files in other folders)
