[package]
name = "vcoin-program"
version = "0.1.0"
edition = "2021"
description = "VCoin Token Smart Contract with Token-2022, Presale, and Vesting functionality"
license = "MIT"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.10.3"
thiserror = "1.0.61"
solana-program = "1.18.11"
num-derive = "0.4.2"
num-traits = "0.2.19"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.3.1"
spl-type-length-value = "0.4.2"
pyth-sdk-solana = "0.10.4"
switchboard-solana = "0.30.4"  # Replaced switchboard-v2 with switchboard-solana
lazy_static = "1.4.0"

[dev-dependencies]
solana-program-test = "1.18.11"
solana-sdk = "1.18.11"

[lib]
crate-type = ["cdylib", "lib"]